# aloud

./: .gitignore  LICENSE  README.md  aloud.py  pyproject.toml  read.py
assets/: demo.cast
scripts/: record_demo.py
